--- a/love.html
+++ b/love.html
@@ -7,7 +7,7 @@
 	<meta name="title" content="3D Cube - For Crush | Aoudumber Bade">
     <meta name="github" content="https://github.com/Aoudumber-Bade">
     <link rel="shortcut icon" href="./logo.ico" type="image/x-icon" />
-  <title>Happy Womens Day - Aoudumber Bade</title>
+  <title>Happy Womens Day - Dear Khushi</title>
   <link rel="stylesheet" href="./css/style.css">
 
 </head>
